# syscall-sm-cfi-e-bpf

./: Cargo.toml  README.md
collect-syscall-data/: Cargo.toml
collect-syscall-data/src/: main.rs
res/: cat.json  cat.syscall  echo.json  echo.syscall
syscall-sm-cfi-e-bpf/: Cargo.toml
syscall-sm-cfi-e-bpf-common/: Cargo.toml
syscall-sm-cfi-e-bpf-common/src/: lib.rs
syscall-sm-cfi-e-bpf-ebpf/: Cargo.toml
syscall-sm-cfi-e-bpf-ebpf/src/: main.rs
syscall-sm-cfi-e-bpf/src/: main.rs
syscall_extractor/: Cargo.toml
syscall_extractor/src/: main.rs
syscalls/: Cargo.toml
syscalls/src/: lib.rs  state.rs  state_machine_data.rs  syscalls.rs
xtask/src/: build_ebpf.rs  collect_syscall_data.rs  main.rs  run.rs  syscall_extractor.rs
