[package]
name = "syscall-sm-cfi-e-bpf-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
syscall-sm-cfi-e-bpf-common = { path = "../syscall-sm-cfi-e-bpf-common", as="syscall_smi_cfi_common" }

[[bin]]
name = "syscall-sm-cfi-e-bpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
