[package]
name = "syscall-sm-cfi-e-bpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
syscall-sm-cfi-e-bpf-common = { path = "../syscall-sm-cfi-e-bpf-common", as = "syscalls_sm_cfi_e_bpf_common", features = ["user"] }
syscalls = { path = "../syscalls", as = "syscalls_common" }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
serde = "1.0.158"
serde_json = "1.0.94"

[[bin]]
name = "syscall-sm-cfi-e-bpf"
path = "src/main.rs"
