[package]
name = "syscall_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscalls = { path = "../syscalls", as = "syscalls_common" }
env_logger = "0.10"
log = "0.4"
serde = "1.0.158"
serde_json = "1.0.94"
